tests/fixtures/errors/WITH_BEFORE_ON__B.tsl
DROP stick 2 WITH amount >= 10 ON Donation
